# mev-bot

./: .env.example  .gitignore  Cargo.lock.example2  Cargo.toml  README.md  analyze_mev_logs.sh  analyze_stats.sh  persistent_bot.sh  run.sh  run_with_stats.sh  solana-keypair.json
examples/: professional_cli.rs
src/: config.rs  integration_tests.rs  lib.rs  logging.rs  main.rs  utils.rs
src/executor/: eth.rs  mev_strategies.rs  mod.rs  solana.rs  solana_executor.rs  test_executor.rs  test_jito.rs
src/mempool/: eth.rs  mod.rs  solana.rs  test_mempool.rs
src/rpc/: mod.rs  rpc_manager.rs
src/strategy/: executor.rs  mod.rs  strategy.rs
src/utils/: analytics.rs  dex_api.rs  dex_monitor.rs  dex_swap_instructions.rs  enhanced_transaction_simulator.rs  false_positive_reducer.rs  fee_calculator.rs  jito.rs  jito_optimizer.rs  metrics_collector.rs  mev_simulation_pipeline.rs  mev_strategies.rs  mod.rs  opportunity_evaluator.rs  profit_calculator.rs  profitability_calculator.rs  risk_controls.rs  risk_manager.rs  solana_utils.rs  transaction_simulator.rs
