[package]
name = "rust-mev-hybrid-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Ethereum
ethers = { version = "=2.0.14", features = ["ws", "rustls"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
hex = "0.4.3"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI formatting
colored = "2.0"

# Utilities
rand = "0.8"

# Solana (commented out due to dependency conflicts)
# solana-client = "1.17"
# solana-sdk = "1.17"
# solana-transaction-status = "1.17"

