[package]
name = "rust-mev-hybrid-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Ethereum
ethers = { version = "2.0.14", features = ["ws", "rustls"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
hex = "0.4.3"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI formatting
colored = "2.0"

# Utilities
rand = "0.8"

# HTTP client for connecting to Solana RPC
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.20"
url = "2.0"

# WebSocket utilities
futures-util = "0.3"

# Base58 encoding for Solana transactions
bs58 = "0.4"
bincode = "1.3"

